# SDL_GameOfLife

./: .gitignore  CMakeLists.txt  README.md
include/: display.h  game_of_life.h  read_grid.h  save_grid.h
src/: display.c  game_of_life.c  main.c  read_grid.c  save_grid.c
tests/: game_of_life_tests.c  game_of_life_tests.h  integration_tests.c  integration_tests.h  read_grid_tests.c  read_grid_tests.h  save_grid_tests.c
